--- a/instalaciones/basica/docker-compose.yaml
+++ b/instalaciones/basica/docker-compose.yaml
@@ -73,6 +73,7 @@ services:
     ports:
       - ${ES_PORT}:9200
     environment:
+      - ES_JAVA_OPTS=-Xms2g -Xmx2g
       - node.name=es01  # nombre interno al cluster
       - cluster.name=${CLUSTER_NAME}
       - cluster.initial_master_nodes=es01,es02,es03 # Nombres de nodos en ES
@@ -90,7 +91,6 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
@@ -113,6 +113,7 @@ services:
       - certs:/usr/share/elasticsearch/config/certs
       - esdata02:/usr/share/elasticsearch/data
     environment:
+      - ES_JAVA_OPTS=-Xms2g -Xmx2g
       - node.name=es02
       - cluster.name=${CLUSTER_NAME}
       - cluster.initial_master_nodes=es01,es02,es03
@@ -129,7 +130,6 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
@@ -152,6 +152,7 @@ services:
       - certs:/usr/share/elasticsearch/config/certs
       - esdata03:/usr/share/elasticsearch/data
     environment:
+      - ES_JAVA_OPTS=-Xms2g -Xmx2g
       - node.name=es03
       - cluster.name=${CLUSTER_NAME}
       - cluster.initial_master_nodes=es01,es02,es03
@@ -168,7 +169,6 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
     ulimits:
       memlock:
         soft: -1
@@ -203,7 +203,6 @@ services:
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=config/certs/ca/ca.crt
-    mem_limit: ${MEM_LIMIT}
     healthcheck:
       test:
         [
