--- a/ejemplos/stackELK/logstash/logstash-apache-log.conf
+++ b/ejemplos/stackELK/logstash/logstash-apache-log.conf
@@ -2,13 +2,46 @@
 # El puerto por el que vamos a escuchar
 
 
+input {
+    beats {
+        port => "5045"
+    }
+}
+
 # TRANSFORMACIONES
+filter {
+    grok {
+        match => { "message" => "%{COMBINEDAPACHELOG}" }
+        #https://github.com/hpcugent/logstash-patterns/blob/master/files/grok-patterns
+    }
+}
+
+
+
+
+
 
 # Geoposicionar las IPS
 
-
 # A donde mando los datos
+
+output {
+    stdout {
+        codec => rubydebug
+    }
+
+
 # Al elastic, a donde?
+    elasticsearch {
+        hosts => ["https://172.31.12.218:9200","https://172.31.12.218:9201"] # balanceador de carga -> Coordinadores
+        user => elastic
+        password => password
+        cacert => "/usr/share/logstash/certs/ca/ca.crt"
+        ssl => true
+    
+        index => "prueba1"
+    }
+}
 # A qué indice?
 # En principio debería... apache-log-MARZO-2023
 #                                    ABRIL-2024
@@ -23,3 +56,12 @@
 # MAPPINGS
 
 # Pero eso querré configurarlos desde logstash
+
+
+# PROGRAMA:   ETL
+
+# Como programa que estamos desarrollando, nos tenemos que adaptar las formas de trabajo que tienen los que saben de hacer programas.
+# - Desarrolladores
+
+# Empleo de un sistema de Control de Versiones: git
+# Necesitamos trabajar en diferentes entornos : PRUEBAS , PRODUCCION
