--- a/ejemplos/stackELK/logstash/logstash-apache-log.conf
+++ b/ejemplos/stackELK/logstash/logstash-apache-log.conf
@@ -14,6 +14,15 @@ filter {
         match => { "message" => "%{COMBINEDAPACHELOG}" }
         #https://github.com/hpcugent/logstash-patterns/blob/master/files/grok-patterns
     }
+    
+    mutate {
+        remove_field => [ "@timestamp" , "event", "agent", "ecs", "input", "@version", "log"]
+    }
+    
+    date {
+        match => ["timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
+        remove_field => [ "timestamp" ]
+    }
 }
 
 
@@ -39,7 +48,11 @@ output {
         cacert => "/usr/share/logstash/certs/ca/ca.crt"
         ssl => true
     
-        index => "prueba1"
+        index => "webserver-%{+YYYY.MM}"
+        
+        manage_template => true
+        template_name => "plantilla-webservers"
+        template =>  "/usr/share/logstash/templates/template.json"
     }
 }
 # A qué indice?
