--- a/ejemplos/stackELK/logstash/logstash-apache-log.conf
+++ b/ejemplos/stackELK/logstash/logstash-apache-log.conf
@@ -43,15 +43,18 @@ output {
 # Al elastic, a donde?
     elasticsearch {
         hosts => ["https://172.31.12.218:9200","https://172.31.12.218:9201"] # balanceador de carga -> Coordinadores
+                    ### AQUI
         user => elastic
         password => password
         cacert => "/usr/share/logstash/certs/ca/ca.crt"
         ssl => true
     
-        index => "webserver-%{+YYYY.MM}"
+        index => "servidor-apache-%{+YYYY.MM}"
+                    ### AQUI
 
         manage_template => true
-        template_name => "plantilla-webservers"
+        template_name => "plantilla-apache"
+                    ### AQUI
         template =>  "/usr/share/logstash/templates/template.json"
     }
 }
